<resources>
    <string name="app_name">Bumpy_belly2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Name">Name</string>
    <string name="FirstName">First name</string>
    <string name="LastName">Last name</string>
    <string name="Weeks">Weeks</string>
    <string name="Register">Register</string>
    <string name="one">1</string>
    <string name="Startdate">Start date</string>
    <string name="Conceptiondate">Conception date</string>
    <string name="Gender">Gender</string>
    <string name="VerwijderZwangerschap">Verwijder zwangerschap</string>
    <string name="Changepregnancy">Change pregnancy</string>
    <string name="Save">Save</string>
    <string name="YES">Yes</string>
    <string name="CancelP">Cancel pregnancy</string>
    <string name="Facebook_app_id" translatable="false">557738688491527</string>
    <string name="Facebook_login_protocol_scheme" translatable="false">fb557738688491527</string>


</resources>
