<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@android:color/darker_gray"
tools:context=".Change_pregnancy">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="229dp"
        android:layout_height="130dp"
        android:src="@drawable/pragnant"
        app:layout_constraintBottom_toTopOf="@+id/txtName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="299dp"
        android:layout_height="53dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/BellyRose"
        android:text="@string/Save"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="231dp"
        android:layout_height="95dp"
        android:layout_marginBottom="32dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/Conceptiondate" />

    <CheckBox
        android:id="@+id/checkBoxCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/YES"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toEndOf="@+id/textView9" />

    <TextView
        android:id="@+id/textGender"
        android:layout_width="135dp"
        android:layout_height="46dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="56dp"
        android:text="@string/Gender"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Conceptiondate"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Conceptiondate"
        android:layout_width="139dp"
        android:layout_height="59dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="56dp"
        android:text="@string/Conceptiondate"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="176dp"
        android:layout_height="45dp"
        android:layout_marginBottom="36dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/datePicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/textGender" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="139dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="56dp"
        android:text="@string/CancelP"
        android:textColor="@color/cardview_light_background"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="175dp"
        android:layout_height="46dp"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:hint="@string/FirstName"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toEndOf="@+id/texttName" />

    <TextView
        android:id="@+id/texttName"
        android:layout_width="133dp"
        android:layout_height="49dp"
        android:text="@string/FirstName"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.813" />

    <Button
        android:id="@+id/btntest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:text="Button"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintStart_toEndOf="@+id/checkBoxCancel"
        app:layout_constraintTop_toBottomOf="@+id/datePicker"
        app:layout_constraintVertical_bias="0.535" />


</androidx.constraintlayout.widget.ConstraintLayout>





